# Mavin_Backend

./: .replit  01-21-00_Create_a_short_list_of_ba.md  04-17-07_Create_a_very_short_list_.md  04-19-33_Create_a_very_short_list_.md  04-22-53_Create_a_very_short_list_.md  04-24-24_Create_a_very_short_list_.md  04-37-37_Create_a_very_short_list_.md  04-40-02_Create_a_very_short_list_.md  04-53-45_Is_UCLA_a_good_college.md  04-59-43_What_is_the_best_thing_ab.md  05-03-47_best_lessons_of_Gita.md  05-16-27_best_lessons_of_Lord_Ram_.md  05-18-16_best_lessons_of_Lord_Ram_.md  05-20-45_best_lessons_from_Ramayan.md  05-23-15_best_lessons_from_Ramayan.md  05-23-15_best_lessons_from_Ramayan_hinglish.md  05-28-54_Yes.md  05-28-54_Yes_hinglish.md  05-29-25_HOW_COVER_THE_DEVIDER_BEC.md  06-48-27_hi.md  06-48-27_hi_hinglish.md  06-55-09_hi.md  06-55-09_hi_hinglish.md  07-00-25_helo.md  07-00-25_helo_hinglish.md  07-03-00_hello.md  07-03-00_hello_hinglish.md  07-03-36_hi.md  07-05-37_Create_a_very_short_list_.md  07-06-50_who_is_ghanges_khan.md  07-06-50_who_is_ghanges_khan_hinglish.md  07-09-17_Petrochemical_units_in_ga.md  07-09-30_hi.md  07-09-30_hi_hindi.md  07-09-47_hello.md  07-11-40_Jagdamba_petrochemical.md  07-14-43_hi.md  07-18-49_write_a_short_one_page_on.md  07-20-03_What_is_the_best_time_for.md  07-20-48_hi.md  (+156 more)
HelloWorld/HelloWorld/: hello.py
StringAnalyzer/StringAnalyzer/: string_analyzer.py
