[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tavily-python = "^0.3.3"
anthropic = "^0.25.7"
rich = "^13.7.1"
mkdocs-techdocs-core = "^1.3.5"
pypandoc = "^1.13"
flask = "^3.0.3"
helper = "^2.5.0"
twilio = "^9.0.5"
xds-protos = "^1.63.0"
langchain = "^0.1.20"
langchain-community = "^0.0.38"
langchain-core = "^0.1.52"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
deep-translator = "^1.11.4"
openai = "^1.30.1"
requests = "^2.31.0"
elevenlabs = "^1.2.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"